adjusted routers and projects.json

--- a/src/projects.json
+++ b/src/projects.json
@@ -8,7 +8,7 @@
 		"description": [
 			"Calculator is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to See the size of the elements adjust based on their device's screen size, Perform mathmatical operations like addition, subtraction, multiplication, and division and Adjust the color theme based on their preference.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -21,7 +21,7 @@
 		"description": [
 			"Expense chart component is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the bar chart and hover over the individual bars to see the correct amounts for each day, See the current day’s bar highlighted in a different colour to the other bars, See the current day’s bar highlighted in a different colour to the other bars and See hover states for all interactive elements on the page.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -34,7 +34,7 @@
 		"description": [
 			"Product preview card component is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout depending on their device's screen size, See hover and focus states for interactive elements and See the cards details change on screen.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -47,7 +47,7 @@
 		"description": [
 			"Tip calculator app is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout for the app depending on their device's screen size, See hover states for all interactive elements on the page and Calculate the correct tip and total cost of the bill per person.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -60,7 +60,7 @@
 		"description": [
 			"Product preview card component is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout depending on their device's screen size and See hover and focus states for interactive elements.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -73,7 +73,7 @@
 		"description": [
 			"Advice generator app is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout for the app depending on their device's screen size, See hover states for all interactive elements on the page and Generate a new piece of advice by clicking the dice icon.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -86,7 +86,7 @@
 		"description": [
 			"Component with sign up form is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout for the site depending on their device's screen size, See hover states for all interactive elements on the page, Receive an error message when the form is submitted if Any input field is empty. The message for this error should say '[Field Name] cannot be empty' and The email address is not formatted correctly (i.e. a correct email address should have this structure: name@host.tld). The message for this error should say 'Looks like this is not an email'.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -99,7 +99,7 @@
 		"description": [
 			"Interactive rating component is a web page and a solution that I created for the Frontend Mentor challange.",
 			"Users should be able to View the optimal layout for the site depending on their device's screen size, See hover states for all interactive elements on the page, Select and submit a number rating and See the 'Thank you' card state after submitting a rating.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "typescript", "git", "github"]
 	},
@@ -112,7 +112,7 @@
 		"description": [
 			"Full Stack Project is a web page and a project that I created for start2impact.",
 			"Users should be able to View the optimal layout for the site depending on their device's screen size, See hover states for all interactive elements on the page, Sign in and Sign up with an account, Create and pubblish a post and comment finaly upvote or downvote a post.",
-			"Feel free to see the video of the project by visiting the See Video button."
+			"Feel free to see the video of the project by visiting the See Video button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "javascript", "node", "git", "github"]
 	},
@@ -125,7 +125,7 @@
 		"description": [
 			"Node Project is a web page and a project that I created for start2impact.",
 			"Users should be able to View the optimal layout for the site depending on their device's screen size, See hover states for all interactive elements on the page and Create and pubblish a post whit foto whit a form.",
-			"Feel free to see the video of the project by visiting the See Video button."
+			"Feel free to see the video of the project by visiting the See Video button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "javascript", "node", "git", "github"]
 	},
@@ -138,7 +138,7 @@
 		"description": [
 			"React Project is a web page and a project that I created for start2impact.",
 			"Users should be able to View the optimal layout for the site depending on their device's screen size, See hover states for all interactive elements on the page, Search with the search input and See the Book infos on another page.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "react", "javascript", "git", "github"]
 	},
@@ -150,8 +150,8 @@
 		"repostoryGithub": "https://github.com/Lyr01/inquinamento-delle-citta",
 		"description": [
 			"JavaScript Project is a web page and a project that I created for start2impact.",
-			"Users should be able to View the optimal layout for the site depending on their device's screen size and Search with the search input and.",
-			"Feel free to check out the Project by visiting the See Live button."
+			"Users should be able to View the optimal layout for the site depending on their device's screen size and Search with the search input, this was my first project and the start for this adventure.",
+			"Feel free to check out the Project by visiting the See Live button or by clicking the image."
 		],
 		"toolUsed": ["html", "css", "javascript", "git", "github"]
 	}
